Fix ironic mispelling

--- a/dos33.html
+++ b/dos33.html
@@ -5665,10 +5665,10 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     348             RTS
                     349 ;
                     350             PAGE
-                    351 DISKIO      PHP             ;SAVE INTERUPT STATUS           ; *spellling* Interrupt
-                    352             SEI             ;INHIBIT INTERUPT WHILE         ; *spellingg* Interrupt
+                    351 DISKIO      PHP             ;SAVE INTERUPT STATUS           ; *spelling* Interrupt
+                    352             SEI             ;INHIBIT INTERUPT WHILE         ; *spelling* Interrupt
                     353             JSR RWTS        ; ACCESSING DISK
-                    354             BCS DSKERR      ;MUST PASS BACK CARRY FLAG &amp; INTERUPT      ; *spellingg* Interrupt
+                    354             BCS DSKERR      ;MUST PASS BACK CARRY FLAG &amp; INTERUPT      ; *spelling* Interrupt
                     355             PLP
                     356             CLC
                     357             RTS
