Change EQU to be purple

--- a/dos33.html
+++ b/dos33.html
@@ -234,7 +234,7 @@ a.dumb { /* How Not To Design a File System (HNTDAFS) or How Not To Design an Op
     color: #808; /* purple */
 }
 a.e { /* const equ */
-    color          : #088  ; /* dark green */
+    color          : #80F  ; /* 088 = dark green */
     text-decoration: none  ; /* remove underlink from data link */
     font-weight    : normal; /* remove bold */
 }
