Fix ATSTV and ITSTV to be values, not variables

--- a/dos33.html
+++ b/dos33.html
@@ -883,8 +883,8 @@ With that "legalese" out of the way ... enjoy the read!
                     00112 076 <a class="f" name="ASRSEQ1">ASRSEQ1     </a>EQU $D4F2                                       ; ROM entry point
                     00113 077 <a class="f" name="ASRSEQ2">ASRSEQ2     </a>EQU $CF2                                        ; RAM entry point
                     00114 078 <a class="f" name="AITSTL" >AITSTL      </a>EQU $E000       ; AS 1 IB TEST LOC              ; Applesoft Basic E000: JMP $F128
-                    00115 079 <a class="d" name="ATSTV"  >ATSTV       </a>EQU $4C         ; AS TEST VALUE                 ; Applesoft Basic
-                    00116 080 <a class="d" name="ITSTV"  >ITSTV       </a>EQU $20         ; IB TEST VALUE                 ; Integer Basic
+                    00115 079 <a class="e" name="ATSTV"  >ATSTV       </a>EQU $4C         ; AS TEST VALUE                 ; Applesoft Basic
+                    00116 080 <a class="e" name="ITSTV"  >ITSTV       </a>EQU $20         ; IB TEST VALUE                 ; Integer Basic
                     00117 081 <a class="d" name="BOOTSL" >BOOTSL      </a>EQU $2E         ; BOOT FROM SLOT                ; Slot from Boot
                     00118 082 <a class="d" name="ZPGFCB" >ZPGFCB      </a>EQU $42         ; ZERO PAGE WORK CELL           ; File Control Block
                     00119 083 <a class="f" name="MONRST" >MONRST      </a>EQU $FF65       ;MONITOR RESET ENTRY
